# inplace_string

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows-mingw.yml  windows-msvc.yml
bench/: CMakeLists.txt  bm_inplace_string_append.cpp  bm_inplace_string_assign.cpp  bm_inplace_string_find.cpp  bm_inplace_string_init.cpp  bm_inplace_string_mutation.cpp  bm_inplace_string_stream.cpp
include/qx/: inplace_string.h
tests/: CMakeLists.txt  matchers.h  string_api_tester.h  test_inplace_string_accessors.cpp  test_inplace_string_api.cpp  test_inplace_string_append.cpp  test_inplace_string_assign.cpp  test_inplace_string_compare.cpp  test_inplace_string_contracts.cpp  test_inplace_string_coverage.cpp  test_inplace_string_erase.cpp  test_inplace_string_find.cpp  test_inplace_string_init.cpp  test_inplace_string_insert.cpp  test_inplace_string_iostream.cpp  test_inplace_string_replace.cpp  test_inplace_string_utils.cpp  test_to_inplace_string.cpp
